# TabDPT

./: README.md  pyproject.toml  tabdpt.py  tabdpt_model.py  utils.py
checkpoints/: .gitattributes  tabdpt1_1.pth  tabdpt_76M.ckpt
src/tabdpt/: __init__.py  classifier.py  estimator.py  model.py  regressor.py  tabdpt.py  utils.py
tests/: cls_example.py  reg_example.py
